--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
   </head>
-  <body style="background-color: #00d3d3;">
+  <body style="background-color: #b9fafa;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
